Item get and post now includes item size translations. #42
